# exai-insurance-intel

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  HEARTBEAT.md  MEMORY.md  README.md  exa_people_search_eval.ipynb  heartbeat.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benchmarks/: insurance_cat_queries.json
docs/: agent-execution-defaults.md  demo-gallery.md  exai-search-demo-improvements.md  integration-boundaries.md  issue-tracker.md  local-validation.md  pilot-architecture-decision.md  query-suites.md  rebuild_review.md  roadmap.md  security.md
docs/adr/: ADR-0001-roadmap-governance.md  README.md
docs/sessions/: 2026-03-10-phase1-cli-installability.md  2026-03-10-phase1-foundation-start.md  2026-03-10-roadmap-baseline.md  2026-03-11-phase1-eval-taxonomy-reporting.md  README.md  (+26 more)
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
memory/: 2026-03-27.md  2026-03-27a.md  2026-03-27b.md  2026-03-27c.md  2026-03-27d.md  2026-03-27e.md  2026-03-27f.md  2026-03-27g.md  2026-04-11.md  2026-04-11a.md  2026-04-11b.md  2026-04-11c.md  2026-04-11d.md  2026-04-11e.md  2026-04-28.md
scripts/: generate_heartbeat.py  run_live_validation.py
tests/: test_api.py  test_api_auth.py  test_artifacts.py  test_cache.py  test_cli.py  test_client.py  test_cost_model.py  test_evaluation.py  test_jobs.py  test_models.py  test_persistence.py  test_reporting.py  test_resilience.py  test_safety.py  test_scripts.py  test_users.py  test_workflows.py
(+36 files in other folders)
