[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exa-demo"
version = "0.1.0"
description = "Notebook-first Exa search evaluation harness for insurance and CAT-loss workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests==2.32.3",
  "python-dotenv==1.0.1",
  "pandas==2.2.3",
  "tabulate==0.9.0",
]

[project.optional-dependencies]
dev = [
  "nbclient==0.10.2",
  "nbformat==5.10.4",
  "pytest==8.3.5",
]

[project.scripts]
exa-demo = "exa_demo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
